--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -35,7 +35,14 @@ h1 {
 
 .navbar-brand img {
   padding-top: 10px;
+  /* max-width: 50%;
+  height: auto; */
 }
+
+/* img {
+  max-width: 50%;
+  max-height: 50%;
+} */
 
 .loading-spinner {
   animation-duration: 0.75s;
